--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="clear_data">重设数据</string>
     <string name="delte_confrim">确定删除所有数据\n并重新设置吗？</string>
     <string name="select_remind_text">课前提醒</string>
-    <string name="set_time">设置时间</string>
+    <string name="setting">设置</string>
+    <string name="week_sum">本学期周数：</string>
+    <string name="cur_week">当前周数：</string>
 </resources>
